[package]
name = "aoc_2021_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15"

[[example]]
name = "day01"
test = true

[[example]]
name = "day02"
test = true

[[example]]
name = "day03"
test = true

[[example]]
name = "day04"
test = true

[[example]]
name = "day05"
test = true

[[example]]
name = "day06"
test = true

[[example]]
name = "day07"
test = true

[[example]]
name = "day08"
test = true

[[example]]
name = "day09"
test = true
