[package]
name = "aoc_2021_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15"
itertools = "0.10"

[[example]]
name = "day01"
test = true

[[example]]
name = "day02"
test = true

[[example]]
name = "day03"
test = true

[[example]]
name = "day04"
test = true

[[example]]
name = "day05"
test = true

[[example]]
name = "day06"
test = true

[[example]]
name = "day07"
test = true

[[example]]
name = "day08"
test = true

[[example]]
name = "day09"
test = true

[[example]]
name = "day10"
test = true

[[example]]
name = "day11"
test = true

[[example]]
name = "day13"
test = true

[[example]]
name = "day14"
test = true

[[example]]
name = "day16"
test = true

[[example]]
name = "day17"
test = true

[[example]]
name = "day19"
test = true

[[example]]
name = "day20"
test = true

[[example]]
name = "day21"
test = true

[[example]]
name = "day22"
test = true

[[example]]
name = "day24"
test = true

[[example]]
name = "day25"
test = true
